--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@dicebear/avatars": "^4.10.5",
+    "@dicebear/avatars-identicon-sprites": "^4.10.5",
+    "@dicebear/miniavs": "^4.10.5",
     "primeicons": "^6.0.1",
     "primeng": "^14.1.2",
     "rxjs": "~7.5.0",
